[package]
name = "claude_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.31.0"
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
